[tool.poetry]
name = "gridappsd-python"
version = "v2.7.230209"
description = "A GridAPPS-D Python Adapter"
authors = [
    "C. Allwardt <3979063+craig8@users.noreply.github.com>",
    "P. Sharma <poorva.sharma@pnnl.gov",
    "A. Fisher <andrew.fisher@pnnl.gov"
]
license = "BSD-3-Clause"

repository = "https://github.com/GRIDAPPSD/gridappsd-python"
homepage = "https://gridappsd.readthedocs.io"

keywords = ["gridappsd", "grid", "activmq", "powergrid", "simulation", "library"]

readme = "README.md"

include =["gridappsd/conf/*"]
packages = [
    { include = 'gridappsd'}
]

[tool.poetry.scripts]
# Add things in the form
# myscript = 'my_package:main'
register_app = 'gridappsd.register_app:main'
gridappsd-cli = 'gridappsd.cli:_main'


[tool.poetry.dependencies]
python = ">=3.7.9,<4.0"
PyYAML = "^6.0"
pytz = "^2022.7"
dateutils = "^0.6.7"
#gridappsd-cim-profile={url="https://github.com/GRIDAPPSD/gridappsd-cim-profile/releases/download/v0.7.20230120180831a0/gridappsd_cim_profile-0.7.20230120180831a0-py3-none-any.whl"}
#gridappsd-cim-profile = "^0.10.20230208223046a0"
stomp-py = "6.0.0"
gridappsd-cim-lab = "^0.11.230209"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.2"
pytest-html = "^3.1.1"
mock = "^4.0.3"
docker = "^4.4.4"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
