[tool.poetry]
name = "gridappsd-python-workspace"
version = "2024.8.1a0"
description = "A GridAPPS-D Python Adapter"
authors = [
    "C. Allwardt <3979063+craig8@users.noreply.github.com>",
    "P. Sharma <poorva.sharma@pnnl.gov",
    "A. Fisher <andrew.fisher@pnnl.gov"
]
license = "BSD-3-Clause"

repository = "https://github.com/GRIDAPPSD/gridappsd-python"
homepage = "https://gridappsd.readthedocs.io"

keywords = ["gridappsd", "grid", "activmq", "powergrid", "simulation", "library"]

readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.9,<4.0"


[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
