[tool.poetry]
name = "gridappsd-python-workspace"
version = "2025.2.1a3"
description = "A GridAPPS-D Python Adapter"
authors = [
    "C. Allwardt <3979063+craig8@users.noreply.github.com>",
    "P. Sharma <poorva.sharma@pnnl.gov",
    "A. Fisher <andrew.fisher@pnnl.gov"
]
license = "BSD-3-Clause"
package-mode = false

repository = "https://github.com/GRIDAPPSD/gridappsd-python"
homepage = "https://gridappsd.readthedocs.io"

keywords = ["gridappsd", "grid", "activemq", "powergrid", "simulation", "library"]

readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"