[tool.poetry]
name = "gridappsd-field-bus"
version = "2023.12.2a0"
description = "GridAPPS-D Field Bus Implementation"
authors = [
    "C. Allwardt <3979063+craig8@users.noreply.github.com>",
    "P. Sharma <poorva.sharma@pnnl.gov",
    "A. Fisher <andrew.fisher@pnnl.gov"
]
license = "BSD-3-Clause"

repository = "https://github.com/GRIDAPPSD/gridappsd-python"
homepage = "https://gridappsd.readthedocs.io"

keywords = ["gridappsd", "grid", "activmq", "powergrid", "simulation", "library"]

readme = "README.md"


packages = [
    { include = 'gridappsd'}
]

[tool.poetry.scripts]
# Add things in the form
# myscript = 'my_package:main'
context_manager = 'gridappsd.field_interface.context_manager:_main'

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
gridappsd-python = ">2023"
cim-graph = ">=0.1.1a0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.2"
pytest-html = "^3.1.1"
mock = "^4.0.3"
docker = "^4.4.4"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.yapfignore]
ignore_patterns = [
    ".venv/**",
    ".pytest_cache/**",
    "dist/**",
    "docs/**"
]

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 4
column_limit = 99
split_before_logical_operator = true
