[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gridappsd-field-bus"
version = "2026.1.1b2"
description = "GridAPPS-D Field Bus Implementation"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10,<4.0"
authors = [
    { name = "C. Allwardt", email = "3979063+craig8@users.noreply.github.com" },
    { name = "P. Sharma", email = "poorva.sharma@pnnl.gov" },
    { name = "A. Fisher", email = "andrew.fisher@pnnl.gov" },
]
keywords = ["gridappsd", "grid", "activemq", "powergrid", "simulation", "library"]
dependencies = [
    "gridappsd-python>=2025.3.1a1",
    "cim-graph>=0.4.3a6",
    "click>=8.1",
]

[project.urls]
Repository = "https://github.com/GRIDAPPSD/gridappsd-python"
Homepage = "https://gridappsd.readthedocs.io"

[project.scripts]
start-field-bus-forwarder = "gridappsd_field_bus.forwarder:start_forwarder"
context_manager = "gridappsd_field_bus.field_interface.context_managers.centralized_context_managers:_main"

[tool.hatch.build.targets.wheel]
packages = ["gridappsd_field_bus"]
