[tool.poetry]
name = "gridappsd-python"
version = "2024.8.1a1"
description = "A GridAPPS-D Python Adapter"
authors = [
    "C. Allwardt <3979063+craig8@users.noreply.github.com>",
    "P. Sharma <poorva.sharma@pnnl.gov",
    "A. Fisher <andrew.fisher@pnnl.gov"
]
license = "BSD-3-Clause"

repository = "https://github.com/GRIDAPPSD/gridappsd-python"
homepage = "https://gridappsd.readthedocs.io"

keywords = ["gridappsd", "grid", "activmq", "powergrid", "simulation", "library"]

readme = "README.md"

include =["gridappsd/conf/*"]
packages = [
    { include = 'gridappsd'}
]

[tool.poetry.scripts]
# Add things in the form
# myscript = 'my_package:main'
register_app = 'gridappsd.register_app:main'
gridappsd-cli = 'gridappsd.cli:_main'


[tool.poetry.dependencies]
python = ">=3.7.9,<4.0"
PyYAML = "^6.0"
pytz = "^2022.7"
dateutils = "^0.6.7"
stomp-py = "6.0.0"
requests = "2.28.2"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.2"
pytest-html = "^3.1.1"
mock = "^4.0.3"
yapf = "^0.32.0"
mypy = "^1.3.0"
python-on-whales = "^0.60.1"
gitpython = "^3.1.31"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.yapfignore]
ignore_patterns = [
    ".venv/**",
    ".pytest_cache/**",
    "dist/**",
    "docs/**"
]

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 4
column_limit = 99
split_before_logical_operator = true
