[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gridappsd-python"
version = "2026.1.1b1"
description = "A GridAPPS-D Python Adapter"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10,<4.0"
authors = [
    { name = "C. Allwardt", email = "3979063+craig8@users.noreply.github.com" },
    { name = "P. Sharma", email = "poorva.sharma@pnnl.gov" },
    { name = "A. Fisher", email = "andrew.fisher@pnnl.gov" },
]
keywords = ["gridappsd", "grid", "activemq", "powergrid", "simulation", "library"]
dependencies = [
    "PyYAML>=6.0",
    "pytz>=2022.7",
    "dateutils>=0.6.7",
    "stomp-py==6.0.0",
    "requests>=2.28",
    "python-dotenv>=0.9",
    "loguru>=0.7",
]

[project.urls]
Repository = "https://github.com/GRIDAPPSD/gridappsd-python"
Homepage = "https://gridappsd.readthedocs.io"

[project.scripts]
register_app = "gridappsd.register_app:main"
gridappsd-cli = "gridappsd.cli:_main"

[tool.hatch.build.targets.wheel]
packages = ["gridappsd"]
